# conclave-room-serialize-c

./: .gitignore  CMakeLists.txt  README.md  deps.toml
.github/workflows/: build_emscripten.yml  build_linux.yml  build_macos.yml
src/: CMakeLists.txt
src/include/conclave-room-serialize/: client_in.h  client_out.h  commands.h  serialize.h  types.h
src/lib/: CMakeLists.txt  client_in.c  client_out.c  serialize.c
src/test/: CMakeLists.txt  main.c  room_serialize_test  test.c
